posts/k8s-at-scale/sample/kong.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/preserve-host: "false"
    konghq.com/plugins: basic-auth,nginx,nginx-rate # The difference is that we are enabling the plugins now
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-deployment
                port:
                  number: 80
